# SC2_bot_data

./: .gitignore  .gitmodules  README.md  config-local.ini  config.ini  ladder.py  parse_sc2_logs.py  pytest.ini  readme_bot.md  requirements.txt  run_vs_ai.py  run_vs_ai_batch.sh  sharpy模块与配置说明.md  start_experiments.sh
API_Tools/: __init__.py  llm_caller.py  probe_reasoning_extraction.py  test_kimi_k25_api.py
API_config/: __init__.py  config.example.json  config.json  llm_settings.json  llm_settings2.json
SC2_Agent/: __init__.py  down_agent.py  executor_agent.py  increment_agent.py  mid_agent.py  naming_agent.py  ordering_agent.py  skill_loader.py  top_agent.py
bot_loader/: bot_definitions.py  game_starter.py  killable_process.py  ladder_zip.py  runner.py
data/: marine-ai.terran.hard.macro.json  tank-ai.terran.veryhard.macro.json
data_ref/: DATA_STRUCTURE.md  data_base_add_graph.json
docs/: README.md  ability_recorder_commit_and_addon.md  agent_bot_test_and_trajectory_review.md  collect_terran_bo.md  cot_generation_validation_notes.md  git_repo_management.md  linux_trajectory_collection.md  readme_test.md  sft_data_format.md  sft_pipeline_usage.md  sharpy模块与配置说明.md  windows_environment_setup.md  windows_run_bots.md  建筑起飞问题分析.md  (+5 more)
python-sc2/: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  generate_dicts_from_data_json.py  pyproject.toml
python-sc2/.github/workflows/: ci.yml  docker-ci.yml
python-sc2/data/: data.json
python-sc2/dockerfiles/: Dockerfile  test_docker_image.sh  test_new_python_candidate.sh
python-sc2/docs_generate/: conf.py
python-sc2/docs_generate/text_files/: docker.rst  introduction.rst
python-sc2/examples/: arcade_bot.py  bot_vs_bot.py  distributed_workers.py  observer_easy_vs_easy.py  simulate_fight_scenario.py  too_slow_bot.py  watch_replay.py  worker_rush.py  worker_stack_bot.py
python-sc2/examples/competitive/: __init__.py  bot.py  run.py
python-sc2/examples/protoss/: cannon_rush.py  find_adept_shades.py  threebase_voidray.py  warpgate_push.py
python-sc2/examples/terran/: cyclone_push.py  mass_reaper.py  onebase_battlecruiser.py  proxy_rax.py  ramp_wall.py
python-sc2/examples/zerg/: banes_banes_banes.py  expand_everywhere.py  hydralisk_push.py  onebase_broodlord.py  worker_split.py  zerg_rush.py
python-sc2/sc2/: action.py  bot_ai.py  bot_ai_internal.py  cache.py  client.py  constants.py  controller.py  data.py  expiring_dict.py  game_data.py  game_info.py  game_state.py  generate_ids.py  main.py  maps.py  observer_ai.py  paths.py  pixel_map.py  player.py  portconfig.py  position.py  power_source.py  protocol.py  proxy.py  renderer.py  sc2process.py  score.py  unit.py  unit_command.py  units.py  versions.py  wsl.py
python-sc2/sc2/dicts/: generic_redirect_abilities.py  unit_abilities.py  unit_research_abilities.py  unit_tech_alias.py  unit_train_build_abilities.py  unit_trained_from.py  unit_unit_alias.py  upgrade_researched_from.py
python-sc2/sc2/ids/: __init__.py  ability_id.py  buff_id.py  effect_id.py  unit_typeid.py  upgrade_id.py
python-sc2/test/: Dockerfile  autotest_bot.py  battery_overcharge_bot.py  benchmark_array_creation.py  benchmark_bot_ai_init.py  benchmark_distance_two_points.py  benchmark_distances_cdist.py  benchmark_distances_points_to_point.py  benchmark_distances_units.py  benchmark_prepare_units.py  damagetest_bot.py  generate_pickle_files_bot.py  queries_test_bot.py  real_time_worker_production.py  run_example_bots_vs_computer.py  run_example_bots_vs_each_other.py  test_directions.py  test_expiring_dict.py  test_pickled_data.py  test_pickled_ramp.py  test_replays.py  travis_test_script.py  upgradestest_bot.py
python-sc2/test/pickle_data/: 16-BitLE.xz  2000AtmospheresAIE.xz  AbiogenesisLE.xz  AbyssalReefLE.xz  AcidPlantLE.xz  AcolyteLE.xz  AcropolisLE.xz  AncientCisternAIE.xz  Artana.xz  AscensiontoAiurLE.xz  AutomatonLE.xz  BackwaterLE.xz  Bandwidth.xz  BattleontheBoardwalkLE.xz  BelShirVestigeLE.xz  BerlingradAIE.xz  BlackburnAIE.xz  BlackpinkLE.xz  BlueshiftLE.xz  CactusValleyLE.xz  CatalystLE.xz  CeruleanFallLE.xz  CrystalCavern.xz  CuriousMindsAIE.xz  CyberForestLE.xz  DarknessSanctuaryLE.xz  DeathAura506.xz  DeathAuraLE.xz  DefendersLandingLE.xz  DigitalFrontier.xz  DiscoBloodbathLE.xz  DragonScalesAIE.xz  DreamcatcherLE.xz  EastwatchLE.xz  Ephemeron.xz  EphemeronLE.xz  Equilibrium513AIE.xz  EternalEmpire506.xz  EternalEmpireLE.xz  EverDream506.xz  (+64 more)
(+778 files in other folders)
